<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LogIn">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:id="@+id/tvemail"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etemail"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvpassword"
        android:text="@string/password"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etpassword"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvforgetpassword"
        android:text="@string/forgetpassword"
        android:layout_marginTop="10dp"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvalreadyaccount"
        android:layout_marginBottom="20dp"
        android:text="@string/alreadyaccount"
        android:textSize="20sp"
        android:layout_marginTop="60dp"
        />

</LinearLayout>